--- a/platform/org.eclipse.platform/intro/css/samples/samples.css
+++ b/platform/org.eclipse.platform/intro/css/samples/samples.css
@@ -2,8 +2,6 @@ body {
 	background-image : url(../graphics/contentpage/samples_wtr.jpg);
 }
 
-.page { min-height : 700px; }
-
 /* show the "selected" image for this page */
 #navigation-links a#samples img, #navigation-links a#samples:hover img { background-image : url(../graphics/icons/ctool/samples48sel.gif); }
 
